Rethink alignment issues.

--- a/resources/scss/components/sidebar/group.scss
+++ b/resources/scss/components/sidebar/group.scss
@@ -1,7 +1,7 @@
 .group {
   background-color: var(--background-color-one);
   border-radius: 0.5rem;
-  width: calc(95% - 1rem);
+  width: 100%;
   margin: 0 auto;
   padding: 0.5rem;
   display: flex;
