--- a/resources/scss/components/sidebar/sidebar.scss
+++ b/resources/scss/components/sidebar/sidebar.scss
@@ -2,8 +2,9 @@
   width: 15vw;
   height: 100%;
   position: sticky;
-  top: 1rem;
+  top: 0;
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
+  padding: 0.5rem 0 0 0.5rem;
 }
